# participant_advisor_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py
api/: advisor_router.py
auth/: token_auth.py
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/agent/: agentic_handler.py
backend/api/: advisor_router.py
backend/auth/: token_auth.py
backend/data/: certent_client.py  dummy_data.py
backend/logic/: processing.py
backend/memory/: session_store.py
backend/models/: config.py  query_model.py
backend/scripts/: check_env.py
backend/services/: agentic_handler.py  llm_agent.py
frontend/: .env  .gitignore  Dockerfile  streamlit_app.py
logic/: processing.py  vesting.py
models/: config.py
scripts/: check_env.py
services/: llm_agent.py
ui/: streamlit_app.py
