[tool.poetry]
name = "participant-advisor-bot"
version = "0.1.0"
description = "A hybrid LLM + agentic Participant Advisor Bot for Equity Management"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "services" }, { include = "api" }, { include = "auth" }, { include = "models" }, { include = "logic" }, { include = "data" }, { include = "memory" }, { include = "ui" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = "^0.27"
pydantic = "^2.6"
httpx = "^0.27"
streamlit = "^1.35"
requests = "^2.32"
gunicorn = "^21.2"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
black = "^24.4"
isort = "^5.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"